--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,5 +28,5 @@ services:
 
     # 起動後に実行するコマンドを指定
     command: 
-      - npm install
-      - npm run start
+#      - npm install
+#      - npm run start
