--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
     image: keinos/sqlite3:latest
 
   app:
-    # 起動するイメージを指定（ここではNode.js v12の公式イメージ）
+    # 起動するイメージを指定
     image: node:16
 
     # 環境変数を設定
